# knot

./: .gitignore  AGENTS.md  Cargo.toml  TASKS.md
.github/workflows/: ci.yml
crates/knot-abi/: Cargo.toml
crates/knot-abi/src/: lib.rs
crates/knot-cli/: Cargo.toml
crates/knot-cli/src/: json.rs  main.rs
crates/knot-cli/tests/: check.rs
crates/knot-cli/tests/error-fixtures/: console.ts  debugger.ts  mutable_default.py
crates/knot-core/: Cargo.toml  build.rs
crates/knot-core/rules/: py-mutable-default-arg.wat  ts-console.wat  ts-debugger.wat
crates/knot-core/src/: bundled_rules.rs  lib.rs
crates/knot-diagnostics/: Cargo.toml
crates/knot-diagnostics/src/: lib.rs
crates/knot-facts/: Cargo.toml
crates/knot-facts/src/: lib.rs  python.rs  tree.rs  typescript.rs
crates/knot-parser/: Cargo.toml
crates/knot-parser/src/: lib.rs
crates/knot-runtime/: Cargo.toml
crates/knot-runtime/src/: lib.rs
crates/knot-sdk/: Cargo.toml
crates/knot-sdk/src/: lib.rs
crates/knot-xtask/: Cargo.toml
crates/knot-xtask/src/: main.rs
docs/: ARCHITECTURE.md  design.md  milestone-2.5-plan.md  roadmap.md
rules/: Cargo.toml
rules/python/: Cargo.toml
rules/python/src/: lib.rs
rules/ts/: Cargo.toml
rules/ts/src/: lib.rs
