[workspace]
members = [
    "crates/knot-abi",
    "crates/knot-cli",
    "crates/knot-core",
    "crates/knot-diagnostics",
    "crates/knot-facts",
    "crates/knot-parser",
    "crates/knot-runtime",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/andreabergia/knot-lint"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0.102"
knot-abi = { path = "crates/knot-abi" }
knot-core = { path = "crates/knot-core" }
knot-diagnostics = { path = "crates/knot-diagnostics" }
knot-facts = { path = "crates/knot-facts" }
knot-parser = { path = "crates/knot-parser" }
knot-runtime = { path = "crates/knot-runtime" }
thiserror = "2.0.17"
