[workspace]
members = ["ts", "python"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/andreabergia/knot-lint"
rust-version = "1.95"

[workspace.dependencies]
knot-sdk = { path = "../crates/knot-sdk" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[profile.release]
panic = "abort"