[package]
name = "knot-abi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
knot-diagnostics.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
