[package]
name = "knot-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "knot"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
knot-core.workspace = true

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
insta = "1.44.0"
predicates = "3.1.3"
