[package]
name = "knot-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[build-dependencies]
wat.workspace = true

[dependencies]
knot-abi.workspace = true
knot-diagnostics.workspace = true
knot-facts.workspace = true
knot-parser.workspace = true
knot-runtime.workspace = true
thiserror.workspace = true
