[package]
name = "knot-parser"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
arborium = { workspace = true, features = [
    "lang-python",
    "lang-tsx",
    "lang-typescript",
] }
knot-diagnostics.workspace = true
