[package]
name = "knot-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
knot-abi.workspace = true
knot-diagnostics.workspace = true
serde.workspace = true
serde_json.workspace = true