[package]
name = "rules-ts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "ts-debugger"
path = "src/bin/ts-debugger.rs"

[[bin]]
name = "ts-console"
path = "src/bin/ts-console.rs"

[dependencies]
knot-sdk.workspace = true